Fix alignment of logo-links

--- a/style.css
+++ b/style.css
@@ -6,5 +6,4 @@ body{
     display: flex;
     margin: 0;
     padding: 16px;
-    justify-content: space-between;
 }
